# Cpp-High-Performance-Second-Edition

./: CMakeLists.txt
Chapter01/: const_correctness.cpp  value_semantics.cpp
Chapter02/: CMakeLists.txt  boost_contract.cpp  decltype_auto.cpp  exception_safety.cpp  lambda_capture.cpp  lambda_types.cpp  move_semantics.cpp  propagate_const.cpp
Chapter04/benchmarks/: CMakeLists.txt  priority_queues.cpp
Chapter05/: contains_duplicates.cpp  scoped_timer.h  sorting.cpp
Chapter06/: range_views.cpp  string_view.cpp  understanding_views.cpp
Chapter07/: small_size_optimization.cpp  stack_size.cpp
Chapter08/: abbreviated_function_templates.cpp  compile_time_hash.cpp  point2d_concepts.cpp
extra/: CMakeLists.txt  main.cpp
extra/benchmarks/: CMakeLists.txt  benchmark.cpp
mylib/: CMakeLists.txt  mylib.c  mylib.h
